crates/squawk_parser/src/snapshots/parser__test__alter_user_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_user.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    IDENT "superuser"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " \n "
    IDENT "superuser"
    WHITESPACE "\n "
    IDENT "nosuperuser"
    WHITESPACE "\n "
    IDENT "createdb"
    WHITESPACE "\n "
    IDENT "nocreatedb"
    WHITESPACE "\n "
    IDENT "createrole"
    WHITESPACE "\n "
    IDENT "nocreaterole"
    WHITESPACE "\n "
    INHERIT_KW "inherit"
    WHITESPACE "\n "
    IDENT "noinherit"
    WHITESPACE "\n "
    IDENT "login"
    WHITESPACE "\n "
    IDENT "nologin"
    WHITESPACE "\n "
    IDENT "replication"
    WHITESPACE "\n "
    IDENT "noreplication"
    WHITESPACE "\n "
    IDENT "bypassrls"
    WHITESPACE "\n "
    IDENT "nobypassrls"
    WHITESPACE "\n "
    CONNECTION_KW "connection"
    WHITESPACE " "
    LIMIT_KW "limit"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n "
    ENCRYPTED_KW "encrypted"
    WHITESPACE " "
    PASSWORD_KW "password"
    WHITESPACE " "
    LITERAL
      STRING "''"
    WHITESPACE "\n "
    PASSWORD_KW "password"
    WHITESPACE " "
    NULL_KW "null"
    WHITESPACE "\n "
    PASSWORD_KW "password"
    WHITESPACE " "
    LITERAL
      STRING "'foo'"
    WHITESPACE "\n "
    VALID_KW "valid"
    WHITESPACE " "
    UNTIL_KW "until"
    WHITESPACE " "
    LITERAL
      STRING "'2025-01-01'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename_user"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    RENAME_KW "rename"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    NAME_REF
      IDENT "v"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'value'"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "'value'"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    DEFAULT_KW "default"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    IN_KW "in"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    NAME_REF
      IDENT "d"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "'value'"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    FROM_KW "from"
    WHITESPACE " "
    CURRENT_KW "current"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    NAME_REF
      IDENT "p"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    ALL_KW "all"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_USER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    IDENT "u"
    WHITESPACE " "
    IN_KW "in"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    NAME_REF
      IDENT "d"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    NAME_REF
      IDENT "p"
  SEMICOLON ";"
  WHITESPACE "\n\n"
