crates/squawk_parser/src/snapshots/parser__test__call_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/call.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CALL_STMT
    CALL_KW "CALL"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "do_db_maintenance"
    ARG_LIST
      L_PAREN "("
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_schema"
  WHITESPACE "\n"
  CALL_STMT
    CALL_KW "CALL"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "partman"
      DOT "."
      PATH_SEGMENT
        NAME
          IDENT "partition_data_proc"
    ARG_LIST
      L_PAREN "("
      LITERAL
        STRING "'partman_test.time_taptest_table'"
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- with_named_args"
  WHITESPACE "\n"
  CALL_STMT
    CALL_KW "CALL"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "do_db_maintenance"
    ARG_LIST
      L_PAREN "("
      NAMED_ARG
        NAME_REF
          IDENT "x"
        WHITESPACE " "
        FAT_ARROW "=>"
        WHITESPACE " "
        LITERAL
          STRING "'1'"
      COMMA ","
      WHITESPACE " "
      LITERAL
        NULL_KW "null"
      COMMA ","
      WHITESPACE " "
      NAMED_ARG
        NAME_REF
          IDENT "b"
        WHITESPACE " "
        FAT_ARROW "=>"
        WHITESPACE " "
        LITERAL
          STRING "'d'"
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
