crates/squawk_parser/src/snapshots/parser__test__checkpoint_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/checkpoint.sql
---
SOURCE_FILE
  COMMENT "-- checkpoint"
  WHITESPACE "\n"
  CHECKPOINT_STMT
    CHECKPOINT_KW "checkpoint"
  SEMICOLON ";"
  WHITESPACE "\n\n"
