crates/squawk_parser/src/snapshots/parser__test__close_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/close.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  CLOSE_STMT
    CLOSE_KW "close"
    WHITESPACE " "
    NAME
      IDENT "foo"
  SEMICOLON ";"
  WHITESPACE "\n"
  CLOSE_STMT
    CLOSE_KW "close"
    WHITESPACE " "
    ALL_KW "all"
  SEMICOLON ";"
  WHITESPACE "\n\n"
